--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
-#control_panel{
+/* #control_panel{
     background-color:cadetblue;
     border: 1;
     border-color: black;
 
-}
+} */
 
 /* Add your dropdown styles here */
 .region {
@@ -88,3 +88,63 @@ input[type="range"] {
     height: 40px;
   }
   
+  .boxplot-container { 
+    border: 2px solid #445D48;
+    margin-top: -40px;
+    fill: #445D48;
+    /* stroke: "#445D48"; */
+  }
+
+  .chart-container{
+    display: flex;
+    flex-direction: row;
+    font-size: 0;
+  }
+
+  .beeswarm-container {
+
+  box-sizing: border-box; 
+
+  align-items: center;
+  flex-direction: column; /* Stack content vertically */
+  justify-content: center;
+  }
+
+  .boxplot-container {
+    /* width: 500;  */
+    flex: 1;
+  border: 1px solid #000; 
+   padding: 10px; 
+  display: flex;
+  flex-direction: column;
+  width: 500; 
+  border: 1px solid #000; 
+  padding: 10px; 
+  box-sizing: border-box; 
+  font-size: 16px;
+  justify-content: center;
+   margin-left: 50px;
+   margin-top: 50px;
+   align-items: center;
+  }  
+
+
+.boxplot {
+    display: flex;
+}
+.box {
+    /* fill: none; */
+    stroke: black;
+}
+.whisker {
+    stroke: black;
+}
+.median-line {
+    stroke: black;
+}
+
+.boxplot-text{
+  font-size: 12px;
+  text-anchor: middle;
+}
+
